<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textintro"
        android:padding="@dimen/padding_regular"
        android:text="@string/choose_a_dessert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textintro"
        app:layout_constraintVertical_bias="0.062" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="199dp"
        android:layout_height="185dp"
        android:layout_below="@id/choose_dessert"
        android:contentDescription="@string/donuts"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/donut_circle"
        android:onClick="showDonutOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@+id/choose_dessert"
        android:layout_toRightOf="@id/donut"
        android:text="@string/donuts"/>

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="199dp"
        android:layout_height="185dp"
        android:layout_below="@id/donut"
        android:contentDescription="@string/ice_cream_sandwiches"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@+id/donut"
        android:layout_toRightOf="@id/ice_cream"
        android:text="@string/ice_cream_sandwiches"/>

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="199dp"
        android:layout_height="185dp"
        android:layout_below="@id/ice_cream"
        android:contentDescription="@string/froyo"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/froyo_circle"
        android:onClick="showFroyoOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@+id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:text="@string/froyo"/>


</RelativeLayout>